--- a/css/style.css
+++ b/css/style.css
@@ -19,16 +19,9 @@ Developer @GA in NYC
 
 /* Clear fix hack */
 .clearfix:after {
- content: ".";
+ content: "";
  display: block;
  clear: both;
- visibility: hidden;
- line-height: 0;
- height: 0;
-}
-
-.clear {
-  clear: both;
 }
 
 .alignright {
@@ -46,10 +39,11 @@ Developer @GA in NYC
 /*******************************************/
 
 body {
- color: #000;
- font-size: 12px;
- line-height: 1.4;
- font-family: 'Open Sans', sans-serif;
+  background-color: #f0efef;
+  color: #000;
+  font-size: 12px;
+  line-height: 1.4;
+  font-family: 'Open Sans', sans-serif;
 }
 
 nav {
@@ -57,6 +51,8 @@ nav {
   background-color: #2A4053;
   padding: 25px 70px;
 }
+
+
 
 
 /******************************************
@@ -74,7 +70,6 @@ header {
 }
 
 footer {
-
 }
 
 /******************************************
@@ -120,34 +115,101 @@ a:hover{
 }
 
 .col-66 {
-  width: 66%;
-  padding-left: 75px;
-  padding-top: 50px;
+  width: 700px;
+  margin-left: 75px;
+  margin-top: 50px;
 }
 
 .col-33 {
-  padding-top: 45px;
-  width: 33%;
-  padding-left: 20px;
+  margin-top: 45px;
+  width: 240px;
+  margin-left: 20px;
 }
 
 .title {
   color: #2A4053;
   font-weight: 800;
-  font-size: 20px;
+  font-size: 32px;
+}
+
+.title li {
+  list-style: none;
+  font-weight: 300;
+  font-size: 24px;
+  margin-left: 5px;
 }
 
 .subject {
   color: #2A4053;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 40px;
 }
 
 .cta {
   font-size: 18px;
   font-weight: 600;
+  display: block;
+  text-align: right;
+  margin: 30px 0;
 }
 
 .featured-image {
   width: 700px;
+  margin: 15px 0;
+}
+
+.content {
+  font-size: 24px;
+  font-weight: 300;
+}
+
+.content:first-letter {
+  font-weight: 600;
+  font-size: 60px;
+}
+
+.first-item {
+  margin-top: 15px;
+}
+
+.last-item {
+  margin-bottom: 45px;
+}
+
+.sidebar-par {
+  font-weight: 300;
+  font-size: 22px;
+}
+
+.learn-more {
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.adbox {
+  width: auto;
+  height: 550px;
+  background: white;
+}
+
+.ad-title {
+ font-size: 26px;
+ font-weight: 600;
+ text-align: center;
+ margin-top: 15px;
+}
+
+/*.sign-up {
+  background: #f9e42e;
+  margin-top: -50px;
+  padding: 1px 25px 47px 25px;
+}*/
+
+footer h2 {
+  font-weight:800;
+  font-size: 24px;
+  text-align: center;
+  color: #f9e42e;
+  padding: 25px;
+  margin-top: -50px;
 }
