--- a/css/style.css
+++ b/css/style.css
@@ -12,16 +12,23 @@ Developer @GA in NYC
 
 /* Box Model Hack */
 * {
- -moz-box-sizing: border-box; /* Firexfox */
- -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
- box-sizing: border-box; /* IE */
+  -moz-box-sizing: border-box; /* Firexfox */
+  -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
+  box-sizing: border-box; /* IE */
 }
 
 /* Clear fix hack */
 .clearfix:after {
- content: "";
- display: block;
- clear: both;
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
+
+.clear {
+  clear: both;
 }
 
 .alignright {
@@ -39,20 +46,17 @@ Developer @GA in NYC
 /*******************************************/
 
 body {
-  background-color: #f0efef;
-  color: #000;
-  font-size: 12px;
+  color: #043049;
+  font-size: 26px;
   line-height: 1.4;
-  font-family: 'Open Sans', sans-serif;
+  color: #606161;
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  background: #f0efef;
 }
-
-nav {
-  width: 100%;
-  background-color: #2A4053;
-  padding: 25px 70px;
+a {
+  text-decoration: none;
 }
-
-
 
 
 /******************************************
@@ -60,17 +64,164 @@ nav {
 /*******************************************/
 
 /* Center the container */
-#container {
+.container {
+  width: 960px;
   margin: 0 auto;
-  width: 1200px;
+}
+
+.logo {
+  font-size: 48px;
+  font-weight: 800;
 }
 
 header {
+  background: #033048;
+  padding: 25px 0;
+  overflow: hidden;
+}
+header .logo {
+  color: #fff;
+  float: left;
+}
 
+header nav {
+  float: right;
+  margin-top: 15px;
+}
+header nav ul li {
+  display: inline-block;
+  margin: 0 0 0 40px;
+  font-size: 24px;
+}
+header nav ul li a {
+  color: #f9e42e;
+}
+#main {
+  margin-top: 80px;
+}
+#posts {
+  width: 700px;
+  display: inline-block;
+  margin-right: 20px;
+  vertical-align: top;
+}
+#sidebar {
+  width: 240px;
+  display: inline-block;
+  vertical-align: top;
+}
+.post {
+  border-bottom: 1px solid #043049;
+  padding-bottom: 40px;
+  margin-bottom: 40px;
+}
+h2 {
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 1.3;
+  margin-bottom: 30px;
+}
+h2 a {
+  color: #043049;
+}
+
+.post img {
+  margin-bottom: 30px;
+}
+.post p {
+  font-size: 24px;
+  line-height: 1.333;
+  color: #606161;
+}
+.post p:first-of-type:first-letter {
+  float: left;
+  font-size: 80px;
+  line-height: 65px;
+  padding-top: 4px;
+  padding-right: 8px;
+  padding-left: 3px;
+  font-weight: 600;
+}
+.readmore, .readless {
+  text-align: right;
+  margin-top: 30px;
+}
+.readmore a, .readless a {
+  color: #043049;
+  font-weight: 600;
+}
+
+.button {
+  border-radius: 5px;
+  font-weight: 800;
+  padding: 12px 0;
+  width: 280px;
+  font-size: 28px;
+  text-align: center;
+  display: block;
+  margin: 0 auto;
+}
+.yellow {
+  background: #f9e42e;
+  color: #033048;
+}
+.blue {
+  background: #033048;
+  color: #fff;
+  font-size: 24px;
+}
+
+#sidebar h3 {
+  font-size: 32px;
+  font-weight: 800;
+  margin-bottom: 15px;
+  color: #043049;
+}
+#sidebar ul {
+  margin-bottom: 40px;
+}
+#sidebar ul li a {
+  color: #043049;
+  font-size: 24px;
+}
+#sidebar p {
+  font-size: 22px;
+  line-height: 1.1;
+  margin-bottom: 40px;
+}
+#sidebar p a {
+  color: #043049;
+  font-weight: 600;
+}
+
+#bottom-cta {
+  background: #f9e42e;
+  padding: 30px;
+  text-align: center;
+  margin-top: 50px;
 }
 
 footer {
-  background-color: #121212;
+  background: #121212;
+  padding: 65px 0 45px;
+  text-align: center;
+}
+footer .logo {
+  color: #f9e42e;
+  margin-bottom: 68px;
+}
+footer ul li {
+  display: inline-block;
+  list-style: none;
+  margin: 0 26px 75px;
+}
+footer p {
+  font-size: 18px;
+  color: #fff;
+  font-weight: 600;
+}
+.hide {
+  display: none;
 }
 
 /******************************************
@@ -78,171 +229,5 @@ footer {
 /*******************************************/
 
 
-.logo-container,
-.nav-items,
-.nav-items li {
-  display: inline-block;
-}
 
-.logo {
-  font-weight: 800;
-  color: white;
-  font-size: 24px;
-}
 
-.nav-items a {
-  color: #f9e42e;
-}
-
-.nav-items {
-  float: right;
-  font-size: 18px;
-}
-
-.nav-items li {
-  padding: 10px 20px;
-}
-
-a {
-  text-decoration: none;
-}
-
-a:hover{
-  text-decoration: underline;
-}
-
-.col {
-  float: left;
-}
-
-.col-66 {
-  width: 700px;
-  margin-left: 75px;
-  margin-top: 50px;
-
-}
-
-.col-33 {
-  margin-top: 45px;
-  width: 240px;
-  margin-left: 20px;
-}
-
-.title {
-  color: #2A4053;
-  font-weight: 800;
-  font-size: 32px;
-}
-
-.title li {
-  list-style: none;
-  font-weight: 300;
-  font-size: 24px;
-  margin-left: 5px;
-}
-
-.subject {
-  color: #2A4053;
-  font-weight: 600;
-  font-size: 40px;
-}
-
-.cta {
-  font-size: 18px;
-  font-weight: 600;
-  display: block;
-  text-align: right;
-  margin: 30px 0;
-}
-
-.featured-image {
-  width: 700px;
-  margin: 15px 0;
-}
-
-.content {
-  font-size: 24px;
-  font-weight: 300;
-}
-
-.content:first-letter {
-  font-weight: 600;
-  font-size: 60px;
-}
-
-.first-item {
-  margin-top: 15px;
-}
-
-.last-item {
-  margin-bottom: 45px;
-}
-
-.sidebar-par {
-  font-weight: 300;
-  font-size: 22px;
-}
-
-.learn-more {
-  font-size: 22px;
-  font-weight: 600;
-}
-
-.adbox {
-  width: auto;
-  height: 550px;
-  background: white;
-  margin-top: 50px;
-  color: #033048;
-}
-
-.ad-title {
- font-size: 26px;
- font-weight: 600;
- text-align: center;
- margin-top: 15px;
-}
-
-.sign-up {
-  background: #f9e42e;
-  margin-top: 50px;
-  text-align: center;
-}
-
-.button2 {
-  background-color: #033048;
-  color: white;
-  font-size: 24px;
-  font-weight: 800;
-  border-radius: 5px;
-  text-align: center;
-  border-radius: 5px;
-  text-align: center;
-  border: 5px;
-  padding: 10px 35px;
-  text-decoration: none;
-  margin: 50px auto;
-  font-family: Open Sans, sans-serif;
-}
-
-footer h2 {
-  font-weight:800;
-  font-size: 24px;
-  text-align: center;
-  color: #f9e42e;
-  padding: 25px;
-}
-
-.facebook {
-  padding-left: 30px;
-}
-
-.logos {
-  text-align: center;
-}
-
-footer p {
-  color: white;
-  text-align: center;
-  padding: 30px;
-}
